--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "description": "Elm starter with Webpack 3 hot-loading",
   "main": "index.js",
   "scripts": {
-    "test": "elm-test",
     "start": "npm run dev",
     "dev": "webpack-dev-server --hot --port 3000",
     "build": "webpack",
     "prod": "webpack -p",
-    "postinstall": "elm-package install -y && elm-test init"
+    "postinstall": "elm-package install -y"
   },
   "repository": {
     "type": "git",
@@ -21,7 +20,6 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
-    "bootstrap-loader": "^2.2.0",
     "chokidar-cli": "^1.2.0",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
@@ -42,7 +40,6 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-beta",
     "loglevel": "^1.4.1"
   }
 }
