--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "author": "Simon Hampton",
-  "name": "elm-webpack-starter",
+  "author": "Janis Miezitis",
+  "name": "todo-elm",
   "version": "1.0.0",
-  "description": "Elm starter with Webpack 3 hot-loading",
+  "description": "An ELM demo application for GDG workshop",
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/simonh1000/elm-webpack-starter.git"
+    "url": "git+https://github.com/janjiss/todo-elm.git"
   },
   "license": "MIT",
   "devDependencies": {
